 * Modified Upload component to use phrases for file upload tabs

2008-11-27 cjg
 * Set/unset flag to stop the edit-phrases option appearing in views or
    abstract pages.

2008-11-27 cjg
 * Added .export file to the clutch of files created for view list pages
    to people can #include it with the .include file if wanted.
 * Some slightly hacky fixes to fix how name values are rendered in view
    page titles and search descriptions. Fixes #3459

2008-12-03 cjg
 * Some clean up to the way search forms are rendered. Fixes #3433 and #2777.
 * Added show_help option to search configuration to allow help to be hidden
    or always shown (rather than toggled.)
 * Added css for table cells which are dependant on javascript being 
    available. (using display: block caused render errors)

2008-12-04 tdb
 * Improved efficiency of access logging (pass object to handler)
 * Don't log accesses to volatile document versions
 * No longer attempts to identify internal referal links
 * Don't attempt to rewrite internal requests

2008-12-04 cjg
 * Fixed bug in workflow which meant it assumed the primary key was "eprintid"
    even on the user dataset. Resolving #3403.
 * Trivial documentation fix, closing #3454.
 * Fixed bug in creating a static .html from a .xhtml file. Fixes #3390. 
 * Now when you add a document or modify one, it's always unrolled when the
    form renders just after. Closes #2938.
 * Fixed jitters on help when it unfearls using javascript.
 * Document fields can now be marked as required, and will have the star
    appear and report problems if not set. Fixes #3195
 * Can now use <upload-methods> option in upload component config to set which
    methods are available to upload files (or set to none to stop new 
    documents being created). Fixing #3450
 * Fixed some non-i18l phrases in Upload.
 * Less confusing error message for missing citation files. Fixes #3369.
 
2008-12-04 cjg
 * Fixed oddity that toolbox.pm defined toolkit.pm. Closes #3464